@@ -1,6 +1,7 @@
 2009-08-26  Graham Cobb  <g+770@cobb.uk.net>
 
 	* debian/rules (confflags): Disable XSP extension
+	(confflags): Remove conflicts between confflags and KDRIVE_PLATFORM_FLAGS
 
 2008-05-02  Graham Cobb  <g+770@cobb.uk.net>
 
